--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Heart Bread</title>
+</head>
+<body>
+  <h1>Heart Bread へようこそ🍞</h1>
+  <p>やさしい手づくりパンがいっぱい！</p>
+</body>
+</html>
