--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
   <h1>Heart Bread へようこそ🍞</h1>
   <p>やさしい手づくりパンがいっぱい！</p>
+  <!-- 🖼 画像の追加（imgフォルダにbread.pngがある想定） -->
+  <img src="IMG_6204.png" alt="おいしいパン" style="max-width: 100%; height: auto;">
 </body>
 </html>
