--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Heart Bread へようこそ🍞</h1>
   <p>やさしい手づくりパンがいっぱい！</p>
   <!-- 🖼 画像の追加（imgフォルダにbread.pngがある想定） -->
-  <img src="IMG_6204.png" alt="おいしいパン" style="max-width: 100%; height: auto;">
+ <img src="IMG_6203.png" alt="おいしいパン1" style="max-width: 100%; height: auto;">
+  <img src="IMG_6204.png" alt="おいしいパン2" style="max-width: 100%; height: auto;">
 </body>
 </html>
