--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <p>やさしい手づくりパンがいっぱい！</p>
 
   <div class="image-row">
-    <img src="IMG_6206.png" alt="おいしいパン1">
-    <img src="IMG_6206.png" alt="おいしいパン2">
+    <img src="IMG_6206.jpeg" alt="おいしいパン1">
+    <img src="IMG_6206.jpeg" alt="おいしいパン2">
   </div>
 </body>
 </html>
