--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <p>やさしい手づくりパンがいっぱい！</p>
 
   <div class="image-row">
-    <img src="IMG_6206.jpeg" alt="おいしいパン1"　style="trancsform:scalex(-1);">
+    <img src="IMG_6206.jpeg" alt="おいしいパン1" style="transform: scaleX(-1);">
+
     <img src="IMG_6206.jpeg" alt="おいしいパン2">
   </div>
 </body>
