--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-image: url('left-curtain.png'), url('right-curtain.png');
       background-position: left top, right top;
       background-repeat: no-repeat, no-repeat;
-      background-size: auto 100%;
+      background-size: auto 100%; /* 背景画像の高さ100%、横は自動 */
     }
 
     .container {
