--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <p>やさしい手づくりパンがいっぱい！</p>
 
     <div class="image-row">
+　　　　<img src="IMG_6205.jpeg" alt="のれん">
       <img src="IMG_6206.jpeg" alt="おいしいパン1" style="transform: scaleX(-1);">
       <img src="IMG_6206.jpeg" alt="おいしいパン2">
     </div>
