--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="image-row">
       <img src="IMG_6206.jpeg" alt="おいしいパン1" style="transform: scaleX(-1);">
       <img src="IMG_6206.jpeg" alt="おいしいパン2">
+       <img src="IMG_6205.png" alt="おいしいパン3">
     </div>
   </div>
 </body>
