--- a/index.html
+++ b/index.html
@@ -1,58 +1,39 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>Heart Bread</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      overflow-x: hidden; /* 横スクロール防止 */
-      background-color: #fefefe;
-      background-image: url('left-curtain.png'), url('right-curtain.png');
-      background-position: left top, right top;
-      background-repeat: no-repeat, no-repeat;
-      background-size: auto 100%;
-    }
+<style>
+body {
+  background-image: url('left-curtain.png'), url('right-curtain.png');
+  background-position: left top, right top;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+}
 
-    .container {
-      width: 100%;
-      max-width: 1800px;
-      margin: 0 auto;
-      background-color: white;
-      padding: 0 10px;
-      box-sizing: border-box;
-      position: relative; /* 背景画像との重なり調整に必要 */
-      z-index: 1;
-    }
+.image-row {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  position: relative; /* 前面に出すため */
+  z-index: 10;
+}
 
-    .image-row {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-      z-index: 10;
-      position: relative; /* カーテンより前に出す */
-    }
+.image-row img {
+  max-width: 30%;
+  height: auto;
+  border-radius: 8px;
+}
 
-    .image-row img {
-      max-width: 45%;
-      height: auto;
-      border-radius: 8px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Heart Bread へようこそ🍞</h1>
-    <p>やさしい手づくりパンがいっぱい！</p>
+@media (max-width: 768px) {
+  .image-row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .image-row img {
+    max-width: 80%;
+    margin-bottom: 10px;
+  }
+}
+</style>
 
-    <div class="image-row">
-      <img src="IMG_6206.jpeg" alt="おいしいパン1" style="transform: scaleX(-1);">
-      <img src="IMG_6206.jpeg" alt="おいしいパン2">
-       <img src="IMG_6205.png" alt="おいしいパン3">
-    </div>
-  </div>
-</body>
-</html>
+<div class="image-row">
+  <img src="IMG_6206.jpeg" alt="パン1" style="transform: scaleX(-1);">
+  <img src="IMG_6206.jpeg" alt="パン2">
+  <img src="IMG_6205.png" alt="パン3">
+</div>
